--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "studiodesign",
   "version": "0.1.0",
-  "homepage": "https://reklame-dizajn.onrender.com",
+  "homepage": "https://darkohedgehog.github.io/reklame-dizajn",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
